--- a/journal/202105.md
+++ b/journal/202105.md
@@ -8,8 +8,8 @@ _الصورة: التَّكْعِيبِيَّة التصاعدية بواسطة 
 
 أبرز أحداث شهر مايو:
 
-* يتلقى نظام الخزينة الجديد بفعالية مكافآت الكتل وقد تم اختباره بالفعل مع الموافقة على أول معاملات الإنفاق الجديدة وتعدينها.
-* تم إصدار النسخة 1.6.3 من برنامج العقدة والمحفظة لإصلاح بعض المشكلات المتعلقة بالتحصيص بإستخدام مزود خدمة التصويت، وإضافة بعض من أحدث الميزات.
+* يتلقى نظام الخزينة الجديد مكافآت الكتل بفعالية وقد تم اختباره بالفعل مع الموافقة على أول معاملات الإنفاق الجديدة وتعدينها.
+*  تم إصدار النسخة 1.6.3 من برنامج العقدة والمحفظة لإصلاح بعض المشكلات المتعلقة بالتحصيص بإستخدام مزود خدمة التصويت، وإضافة بعض الميزات الحديثة.
 * تم إصدار النسخة 0.2.0 من برنامج منصة المبادلات اللامركزية لديكريد DCRDEX، والتي تتضمن أكثر من ثلاثة أشهر من العمل، وتمت إضافة إدماج البرنامج التجريبي ل DCRDEX إلى الإصدار 1.6.3 من ديكريديتون.
 
 المحتويات:
@@ -47,7 +47,7 @@ _الصورة: التَّكْعِيبِيَّة التصاعدية بواسطة 
 
 تم تحديد عملية تصويت متطورة لدعمها في اقتراح تغيير ديكريد 6 وتم تنفيذها في إصدار البرنامج 1.6. وبعبارات بسيطة، الخطوات الرئيسية هي:
 
-* ينشئ القائمون على بوليتيا معاملة إنفاق tspend مطابقة لمتطلبات معينة (عدم إنفاق الكثير من المال، مع فترة انقضاء ليست طويلة، وموقعة من أحد المفتاحين المسموح بهما بالإجماع، إلخ).
+* ينشئ مسؤولو بوليتيا معاملة إنفاق tspend مطابقة لمتطلبات معينة (عدم إنفاق الكثير من المال، مع فترة انقضاء ليست طويلة، وموقعة من أحد المفتاحين المسموح بهما بالإجماع، إلخ).
 * يتم نشر المعاملة في مجمع الذاكرة mempool وتبدأ محافظ التصويت في التصويت عليها
 * يستمر التصويت لمدة تصل إلى 12 يومًا ولكن يمكن "تقصير الدائرة" في غضون 7 أيام تقريبًا إذا أصبحت النتيجة غير قابلة للتغيير بأي أصوات متبقية
 * يمكن لما يصل إلى 17,280 تذكرة تم استدعاؤها للتصويت خلال هذه الفترة أن تدلي بأصوات معاملات الإنفاق tspend (جنبًا إلى جنب مع الموافقة على الكتلة العادية وأصوات التحديث بالإجماع)
@@ -55,15 +55,15 @@ _الصورة: التَّكْعِيبِيَّة التصاعدية بواسطة 
 
 تم اختبار نظام الخزينة الجديد بنجاح على الشبكة الرئيسية بسرعة بعد بدء التشغيل. وفي 10 أمايو، [أُبلغ](https://twitter.com/decredproject/status/1391877816292151296) أصحاب الحصة بإعداد محافظ التصويت الخاصة بهم. ثم في 12 مايو، تم بث عملية اختبار صغيرة [لمعاملة](https://explorer.dcrdata.org/tx/7507bcc72bfde895065034e12e6d462f2360163cd0c879f0db35514f9456b2c1) إنفاق tspend على الشبكة. وكانت أقرب نافذة تصويت في 13 - 24 من مايو، ولكن تم "تقصير دائرة" التصويت  بعد تراكم 6,755 بنعم و تصويت واحد بلا على مدى 9 أيام. ومن بين 12,550 تذكرة كانت لديها فرصة للتصويت في تلك الفترة ، صوتت 54% منها بنشاط. تم تعدين معاملة الإنفاق tspend في الكتلة [556,416](https://explorer.dcrdata.org/block/000000000000000000b8bed4b8511e3c5197d3eee6372db2ba199481e14d5376).
 
-اعتبارا من إصدار البرنامج 1.6.3، يتم دعم تصويت معاملات الإنفاق tspend من قبل "الناخبين المنفردين" فقط والذين يديرون محافظ التصويت 24/7 (ما يناهز 77٪ من جميع أصحاب الحصص اعتبارا من 1 يونيو). والعمل [جار](https://github.com/decred/decrediton/issues/3184) لتمكين هذا لناخبي مقدمي خدمة التصويت.
+اعتبارا من إصدار البرنامج 1.6.3، يتم دعم تصويت معاملات الإنفاق tspend من قبل "الناخبين المنفردين" فقط والذين يديرون محافظ التصويت 24/7 (ما يناهز 77٪ من جميع أصحاب الحصص اعتبارا من 1 يونيو). والعمل [جار](https://github.com/decred/decrediton/issues/3184) لتمكينها لناخبي مقدمي خدمة التصويت.
 
-سيصبح التصويت على إنفاق الخزينة عملية شهرية مهمة لدفع الأموال للأشخاص الذين يبنون ديكريد. [يُنصح](https://twitter.com/decredproject/status/1391877959410233344) الناخبون الفرديون بالاستعداد للتصويت القادم من خلال تهيئة محافظ التصويت الخاصة بهم باستخدام الأمر التالي:
+سيصبح التصويت على إنفاق الخزينة عملية شهرية مهمة لدفع الأموال للأشخاص الذين يبنون ديكريد. [يُنصح](https://twitter.com/decredproject/status/1391877959410233344) لناخبون الفرديون بالاستعداد للتصويت القادم من خلال تهيئة محافظ التصويت الخاصة بهم باستخدام الأمر التالي:
 
     dcrctl --wallet settreasurypolicy "03f6e7041f1cf51ee10e0a01cd2b0385ce3cd9debaabb2296f7e9dee9329da946c" "yes or no"
 
 يعبر هذا الأمر عن ثقتك بإدارة الخزينة الحالية ومفتاحها `03f6e704...`، ويحدد كيف ستصوت محفظتك على المصروفات الموقعة من قبلها. يمكنك التحقق من هذا المفتاح في [DCP-0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) أو في [مصدر التعليمات البرمجية](https://github.com/decred/dcrd/blob/master/chaincfg/mainnetparams.go#L389). التصويت شبه آلي مع هذا التكوين لمرة واحدة، ولكن من الممكن التصويت على معاملات الإنفاق tspend الفردية عند الحاجة إلى تحكم أكثر دقة.
 
-تهانينا لجميع المساهمين بهذا الإنجاز وشكرًا لجميع المساهمين الذين جعلوه حقيقة واقعة!
+تهانينا لجميع المساهمين بهذا الإنجاز وشكرًا لجميع المساهمين الذين جعلوه حقيقة واقِعِيّة!
 
 ## التطوير
 
@@ -140,7 +140,7 @@ _الصورة: التَّكْعِيبِيَّة التصاعدية بواسطة 
 نظام إدارة المتعاقد (CMS):
 
 * تغيير [استعراض](https://github.com/decred/politeia/pull/1351) النظراء للفاتورة من على أساس مجال المؤلف إلى على أساس مجال بند الفاتورة. وسيتيح ذلك للمتعاقدين استعراض جميع الأعمال التي تحمل فواتير في مجالهم حتى وإن كانت تصدر عن متعاقدين في مجالات أخرى. والمجالات الحالية هي التطوير والبحث والتصميم والتسويق.
-* إضافة المزيد من [إشعارات](https://github.com/decred/politeia/pull/1353) البريد الإلكتروني: "سيكون تقديم الفواتير في الوقت المناسب أمرًا أكثر أهمية بمجرد أن يصبح الدفع من الخزينة آليًا بالكامل، لذلك من المقرر إجراء مزيد من الإزعاج".
+* إضافة المزيد من [إشعارات](https://github.com/decred/politeia/pull/1353) البريد الإلكتروني: "سيكون تقديم الفواتير في الوقت المناسب أمرًا أكثر أهمية بمجرد أن يصبح الدفع من الخزينة آليًا بالكامل، لذلك مزيد من الإزعاج لابد منه".
 * تحديث المستندات وتنظيف الكود
 * إصلاح الأخطاء في 4 خلفيات و واجهة مستخدم واحدة
 
@@ -295,7 +295,7 @@ _الصورة: التَّكْعِيبِيَّة التصاعدية بواسطة 
 * المشتركين في [اليوتيوب](https://www.youtube.com/decredchannel): 4,540 (40+)، المشاهدات 186 الف (بزيادة 4 آلاف)
 * نجوم GitHub [dcrd](https://github.com/decred/dcrd): بلغت 598 (7+)، التفرعات: 255 (1+)
 
-تم [نشر](https://decredcommunity.github.io/social-media-stats/posts/20210604.1) ملخص ماي عن ديناميكيات وسائل التواصل الاجتماعي المثيرة للاهتمام، مع جداول لتسهيل القراءة. نقدر التعليقات لفهم مدى قيمة هذه التقارير.
+تم [نشر](https://decredcommunity.github.io/social-media-stats/posts/20210604.1) ملخص مايو عن ديناميكيات وسائل التواصل الاجتماعي المثيرة للاهتمام، مع جداول لتسهيل القراءة. نقدر التعليقات لفهم مدى قيمة هذه التقارير.
 
 ## الإدارة و الحوكمة
 
