--- a/journal/202106.md
+++ b/journal/202106.md
@@ -8,8 +8,8 @@ _الصورة: الشبكية الأساسية بواسطة saender@_
 
 أبرز أحداث شهر يونيو:
 
-* تمت الموافقة على تحديث قادم للإجماع على بوليتيا مما يجعل تغييرات الإجماع المستقبلية أسهل وأكثر موثوقية وأمنًا.
-* شهد خلل في التدقيق في إنفاق الخزينة حدًّا منخفضا للغاية، مما سيتطلب تحديثا بالإجماع لإصلاحه.
+* أعتمد تحديث قادم للإجماع على بوليتيا مما يجعل تغييرات الإجماع المستقبلية أسهل وأكثر موثوقية وأمنًا.
+* شهد خلل في التدقيق على إنفاق الخزينة حدًّا منخفضا للغاية، مما سيتطلب تحديثا بالإجماع لإصلاحه.
 * تمت الموافقة على ثلاثة مقترحات على منصة بوليتيا بنسبة مشاركة عالية (~47٪) والتصويت بنعم (97-99٪) - مكافأة إيجاد العلة والترجمات والنسخة الصريحة لتحديثات التغيير بالإجماع.
 * شهد معدل تجزئة إثبات العمل انخفاضًا كبيرًا، والذي من المحتمل أن يكون مرتبطًا بقمع التعدين داخل الصين.
 
@@ -189,7 +189,7 @@ _الصورة: الشبكية الأساسية بواسطة saender@_
 * خيار [لإرسال الصرف](https://github.com/planetdecred/dcrios/pull/807) إلى الحساب غير المختلط (يتم خلطه قبل الاستخدام)، والإشارة إلى الحساب الذي سينقل الصرف إليه في صفحة الإرسال
 * منع [سكون](https://github.com/planetdecred/dcrios/pull/798) الشاشة أثناء المزامنة أو إعادة المسح أو الخلط
 * قائمة [منسدلة](https://github.com/planetdecred/dcrios/pull/738) أكثر مرونة في قائمة المحافظ
-* تمييز [الخلطات](https://github.com/planetdecred/dcrios/pull/801) مع علامة وأيقونة فريدة
+* تمييز [المخلوطات](https://github.com/planetdecred/dcrios/pull/801) مع علامة وأيقونة فريدة
 * تعديلات واجهة المستخدم
 * ~ 7 إصلاحات للأخطاء
 
@@ -282,7 +282,7 @@ _الصورة: الشبكية الأساسية بواسطة saender@_
 
 إصدارات العقد اعتبارًا من [لقطة](https://nodes.jholdstock.uk/user_agents) 1 يوليو (إجمالي 256، dcrd فقط): النسخة 1.6.2 - 53٪، النسخة 1.6.0 - %19، النسخة 1.6.1 - 13%، النسخة 1.7 لبناءَات التطوير - 7٪، النسخة 1.6 لبناءَات التطوير - 3٪، النسخة 1.5.1 - 2.8٪، النسخة 1.5.2 - %2.
 
-تراوحت حصة [العملات المختلطة](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jzh4wow9-ks9hgjcu&bin=day&axis=time&visibility=true-true-true) بين 43.7 و 47.0٪ وحققت أعلى مستوى جديد على الإطلاق.
+تراوحت حصة [العملات المخلوطة](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jzh4wow9-ks9hgjcu&bin=day&axis=time&visibility=true-true-true) بين 43.7 و 47.0٪ وحققت أعلى مستوى جديد على الإطلاق.
 
 شهدت [الشبكة البرقية](https://ln-map.jholdstock.uk/) لديكريد 34 عقدة (1+)، و 60 قناة (7+) بسعة إجمالية تبلغ 21.8 (بزيادة 4.7)، اعتبارًا من 1 يوليو.
 
@@ -386,7 +386,7 @@ _الصورة: الشبكية الأساسية بواسطة saender@_
 > 
 > (إيضاحات تقنية...)
 > 
-> إذن لماذا هذا أمر مهم؟ هذا يوفر لنا دليلا لا يمكن دحضه على أن اقتراحي موجود في ارتفاع الكتلة 552,071 ولم يتم تغييره منذ ذلك الحين. لا يوجد موقع إنتاج آخر يوفر هذا المستوى من الشفافية وقابلية التدقيق المشفرة لبياناته. ([lukebp@](https://twitter.com/lukebp_/status/1407089424924610572))
+> إذن لماذا هذا أمر مهم؟ هذا يوفر لنا دليلا لا يمكن دحضه على أي اقتراح موجود في ارتفاع الكتلة 552,071 ولم يتم تغييره منذ ذلك الحين. لا يوجد موقع إنتاج آخر يوفر هذا المستوى من الشفافية وقابلية التدقيق المشفرة لبياناته. ([lukebp@](https://twitter.com/lukebp_/status/1407089424924610572))
 
 ## الأسواق
 
