--- a/journal/202106.md
+++ b/journal/202106.md
@@ -360,7 +360,7 @@ _الصورة: الشبكية الأساسية بواسطة saender@_
 
 الترجمة:
 
-* تمت [ترجمة](https://xaur.github.io/decred-news/) المجلة المنشورة مايو 2021 إلى العربية (arij@ و abdulrahman4@) والصينية (Dominic@). تم طرح إصدار أبريل باللغة الإسبانية أيضًا. شكرا لكم جميعا!
+* تمت [ترجمة](https://xaur.github.io/decred-news/) مجلة ديكريد لشهر مايو 2021 إلى العربية (arij@ و abdulrahman4@) والصينية (Dominic@). تم طرح إصدار أبريل باللغة الإسبانية أيضًا. شكرا لكم جميعا!
 
 ## المناقشات
 
