--- a/journal/202107.md
+++ b/journal/202107.md
@@ -321,7 +321,7 @@ _صفحة المكون الإضافي للدفع ل WooCommerce_
 
 أشرطة الفيديو:
 
-* ما ما هي ديكريد؟ | منظمة مستقلة لامركزية | بوليتيا | عملة ديكريد بواسطة MarketSquare على ([اليوتيوب](https://www.youtube.com/watch?v=s8hAwP0JvE4))
+* ما هي ديكريد؟ | منظمة مستقلة لامركزية | بوليتيا | عملة ديكريد بواسطة MarketSquare على ([اليوتيوب](https://www.youtube.com/watch?v=s8hAwP0JvE4))
 * أمن سلسلة الكتل - أساسيات ديكريد بواسطة phoenixgreen@ على ([اليوتيوب](https://www.youtube.com/watch?v=BsKV7fiWdqE))
 * تكلفة الهجوم - أساسيات ديكريد بواسطة phoenixgreen@ على ([اليوتيوب](https://www.youtube.com/watch?v=RXV8dGZ9HEk))
 * الأمن الهجين - أساسيات ديكريد بواسطة phoenixgreen@ على ([اليوتيوب](https://www.youtube.com/watch?v=QgInCQTbw4s))
