--- a/journal/202108.md
+++ b/journal/202108.md
@@ -119,7 +119,7 @@ _مقارنة التغييرات في مقترحات بوليتيا_
 
 * تم التحديث إلى [أحدث](https://github.com/decred/dcrlnd/pull/138) نسخة ل dcrd و dcrwallet
 * تمت إضافة [برنامج نصي](https://github.com/decred/dcrlnd/pull/139) لإنشاء شبكة محاكاة للاختبار
-* إضافة [دعم التحقق البسيط من الدفع SPV](https://github.com/decred/dcrlnd/pull/140) في وضع محفظة مدمجة (وضع محفظة مدمجة + وضع بالتحقق البسيط من الدفع يسمح بتشغيل dcrland الحاجة إلى كل من dcrd وdcrwalet)
+* إضافة [دعم التحقق البسيط من الدفع SPV](https://github.com/decred/dcrlnd/pull/140) في وضع محفظة مدمجة (وضع محفظة مدمجة + وضع التحقق البسيط من الدفع يسمح بتشغيل dcrland الحاجة إلى كل من dcrd وdcrwalet)
 
 <a id="dcrdex" />
 
@@ -235,7 +235,7 @@ _المرشح المخلوط ل godcr_
 
 ## الإدارة و الحوكمة
 
-في أغسطس، تلقت [الخزينة](https://dcrdata.decred.org/treasury) الجديدة 10,942 DCR بقيمة 1.76 مليون دولار بمتوسط ​​سعر أغسطس 161.24. تم إنفاق 845 DCR للدفع للمتعاقدين، بقيمة 136 ألف دولار بسعر أغسطس، أو 1081 ألف دولار بمعدل فواتير يوليو البالغ 127.48 دولارًا. اعتبارًا من 2 سبتمبر، بلغ الرصيد المشترك للخزينة [القديمة](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) والجديدة 713,371 DCR (أي ما يعادل 129 مليون دولار أمريكي بسعر 187.50 دولارًا أمريكيًا).
+في أغسطس، تلقت [الخزينة](https://dcrdata.decred.org/treasury) الجديدة 10,942 DCR بقيمة 1.76 مليون دولار بمتوسط ​​سعر أغسطس 161.24. تم إنفاق 845 DCR للدفع للمتعاقدين، بقيمة 136 ألف دولار بسعر أغسطس، أو 108 ألف دولار بمعدل فوترة يوليو البالغ 127.48 دولارًا. اعتبارًا من 2 سبتمبر، بلغ الرصيد المشترك للخزينة [القديمة](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) والجديدة 713,371 DCR (أي ما يعادل 129 مليون دولار أمريكي بسعر 187.50 دولارًا أمريكيًا).
 
 تم نشر اقتراحين جديدين في أغسطس، وبدأ التصويت على كلاهما في أوائل سبتمبر:
 
@@ -354,7 +354,7 @@ _البيع بشكل غريب و بكميات كبيرة_
 
 ## الخارجية ذات الصلة
 
-أصبح بعض المشرعين الأمريكيين انتقائيين بشكل مدهش بشأن خوارزميات الإجماع واستبعدوا فقط [التعدين بإثبات العمل](https://news.bitcoin.com/white-house-backs-crypto-tax-amendment-endorsing-proof-of-work-infrastructure-bill/) من تعريف "السماسرة" - والذي يتضمن "أي شخص (يتعين النظر فيه) مسؤول عن أي خدمة تنفذ عمليات نقل الأصول الرقمية ويقدمها بانتظام". وقد تم [انتقاد](https://twitter.com/jchervinsky/status/1421150347788263433) هذا التعريف الواسع على أنه يمكن تطبيقه على كل جهة فاعلة اقتصادية تقريبا في هذا المجال، وأصبح موضوعًا لجهود ضغط العملات الرقمية لاستبدال تلك اللغة بأخرى أكثر تحديدًا وتستبعد صراحة جميع المدققين ومطوري البرامج. وكانت هناك صيغة لمشروع القانون حظيت بتأييد عدد من أعضاء مجلس الشيوخ كان من شأنها أن تشدد تشدد الصياغة بهذه الطريقة، ولكن نظرا لإجراءات مجلس الشيوخ، لم يتم النظر في إدخال أي تعديلات وتم [إحالة](https://www.coindesk.com/markets/2021/08/10/us-senate-sends-infrastructure-bill-to-house/) مشروع القانون الذي يتضمن التعريف الواسع النطاق إلى مجلس النواب.
+أصبح بعض المشرعين الأمريكيين انتقائيين بشكل مدهش بشأن خوارزميات الإجماع واستبعدوا فقط [التعدين بإثبات العمل](https://news.bitcoin.com/white-house-backs-crypto-tax-amendment-endorsing-proof-of-work-infrastructure-bill/) من تعريف "السماسرة" - والذي يتضمن "أي شخص (يتعين النظر فيه) مسؤول عن أي خدمة تنفذ عمليات نقل الأصول الرقمية ويقدمها بانتظام". وقد تم [انتقاد](https://twitter.com/jchervinsky/status/1421150347788263433) هذا التعريف الواسع على أنه يمكن تطبيقه على كل جهة فاعلة اقتصادية تقريبا في هذا المجال، وأصبح موضوعًا لجهود ضغط العملات الرقمية لاستبدال تلك اللغة بأخرى أكثر تحديدًا وتستبعد صراحة جميع المدققين ومطوري البرامج. وكانت هناك صيغة لمشروع القانون حظيت بتأييد عدد من أعضاء مجلس الشيوخ كان من شأنها أن تشدد الصياغة بهذه الطريقة، ولكن نظرا لإجراءات مجلس الشيوخ، لم يتم النظر في إدخال أي تعديلات وتم [إحالة](https://www.coindesk.com/markets/2021/08/10/us-senate-sends-infrastructure-bill-to-house/) مشروع القانون الذي يتضمن التعريف الواسع النطاق إلى مجلس النواب.
 
 قامت A16Z، وهي شركة رأسمالية لها حصص في العديد من شبكات العملات الرقمية، [بنشر](https://a16z.com/2021/08/26/open-sourcing-our-token-delegate-program/) "برنامج تفويض التوكنات". تشرح الوثيقة لماذا قررت A16Z تفويض حقوقها في التصويت (فهي تمتلك العديد من التوكنات بحيث ستكون عملية صنع القرار مركزية بخلاف ذلك). كما تشرح كيف يختارون المندوبين، حيث يتم توجيه حوالي 50٪ من مندوبيهم إلى مؤسسات جامعية والباقي إلى شركات ناشئة وغير ربحية.
 
