--- a/journal/202110.md
+++ b/journal/202110.md
@@ -1,3 +1,5 @@
+<div dir="rtl">
+
 # صحيفة ديكريد لشهر أكتوبر 2021
 
 ![abstract art by @saender](../img/202110.1.github.png) 
@@ -409,3 +411,5 @@ _حجم تداول منصة المبادلات اللامركزية لديكري
 النسخة الأصلية لمجلة الديكريد لشهر أكتوبر متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/202110)
 
 تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
+
+</div>
