--- a/journal/202111.md
+++ b/journal/202111.md
@@ -91,7 +91,7 @@ _ديكريديتون هو تطبيق محفظة لسطح المكتب كامل 
 داخلي:
 
 * إعادة إستخدام مكون [علامات التبويب](https://github.com/decred/decrediton/pull/3592) من مكتبة pi-ui
-* إضافة اختبارات آلية لـ: مكون الصفحة المبوبة و[صفحات](https://github.com/decred/decrediton/pull/3584) [الصفحة الرئيسية](https://github.com/decred/decrediton/pull/3598) والخصوصية والأمن
+* إضافة اختبارات آلية لأجل: مكون الصفحة المبوبة و[صفحات](https://github.com/decred/decrediton/pull/3584) [الصفحة الرئيسية](https://github.com/decred/decrediton/pull/3598) والخصوصية والأمن
 
 التغييرات في مكتبة pi-ui (مشتركة بين ديكريديتون و بوليتيا):
 
