--- a/journal/202111.md
+++ b/journal/202111.md
@@ -122,8 +122,8 @@ _بوليتيا هي نظام المقترحات لديكريد. يتم استخ
 
 التغييرات التي تواجه المستخدم المدمجة في نوفمبر:
 
-* استخدام [تنسيق تاريخ](https://github.com/decred/politeiagui/pull/2640) لا لبس فيه مثل 08` سبتمبر 2021`
-* صلاح نظام تصفح [العودة](https://github.com/decred/politeiagui/pull/2658)
+* استخدام [تنسيق تاريخ](https://github.com/decred/politeiagui/pull/2640) خالية من الغموض مثل 08` سبتمبر 2021
+* إصلاح نظام تصفح [العودة](https://github.com/decred/politeiagui/pull/2658)
 * ~ 10 إصلاحات أخرى للأخطاء
 
 التغييرات الداخلية لواجهة المستخدم الرسومية:
@@ -432,7 +432,7 @@ _ حجم التداول الشهري لـ DCRDEX_
 
 أجرت بولكادوت [تصويتا](https://vote.polkadot.network/) بالتوكن لتقرر مستقبل علامتهم التجارية ، واتبعت أسلوب التصويت الرباعي الذي قلل من وزن حسابات تصويت الحيتان وانتقى الناخبون بين شعارين واتجاهات الهوية. كان اختيار الاتجاهات موجها بالأحاسيس. بدأت عملية مراجعة هذه الأصول في ديسمبر 2020، وتم [تمويلها](https://polkadot.polkassembly.io/bounty/0#4f1773e7-159c-4aa4-be6f-2594092c4fa7) بميزانية قدرها 10,000 يورو. تم إجراء التصويت النهائي لاختيار أحد التصميمات المتنافسة على صفحة مخصصة ومن المحتمل أن تكون هذه هي المرة الأولى التي صوتت فيها معظم الحسابات البالغ عددها 2097 - نظرًا لأن واجهة التصويت الخاصة بمقترحات التمويل يصعب الوصول إليها كثيرًا.
 
-قام مجتمع من المستثمرين المشوهين بتشكيل  ConstitutionDAO [لمحاولة](https://www.vice.com/en/article/qjb8av/constitutiondao-aftermath-everyone-very-mad-confused-losing-lots-of-money-fighting-crying-etc) شراء نسخة نادرة من الدستور الأمريكي، وجمعو 40 مليون دولار ب ETH ولكن بعد ذلك [خسرو](https://www.vice.com/en/article/qjb8xv/hedge-fund-ceo-who-bailed-out-gamestop-short-seller-bought-the-constitution) المزاد لصالح الرئيس التنفيذي لصندوق التحوط، كين غريفين. تسبب هذا في الكثير من الحيرة بشأن ما سيحدث للأموال التي تم المساهمة بها، مع الإعلان عن توكن جديد وإلغاءه، وتقلب سعر التوكن PEOPLE الذي حصل عليه المساهمون في DAO بشكل كبير. قرر المشروع في النهاية إنهاء العمل لأنه لا يمكن التوصل إلى اتفاق حول كيفية المضي قدمًا بدون نسخة من الدستور، ويمكن للمساهمين استعادة ETH (لكن رسوم المعاملات ستستهلك معظم أو كل مساهمات المساهمين الصغار) أو المطالبة بتوكنات PEOPLE الخاصة بهم.
+قام مجتمع من مستثمري الكربتو  بتشكيل  ConstitutionDAO [لمحاولة](https://www.vice.com/en/article/qjb8av/constitutiondao-aftermath-everyone-very-mad-confused-losing-lots-of-money-fighting-crying-etc) شراء نسخة نادرة من الدستور الأمريكي، وجمعو 40 مليون دولار ب ETH ولكن بعد ذلك [خسرو](https://www.vice.com/en/article/qjb8xv/hedge-fund-ceo-who-bailed-out-gamestop-short-seller-bought-the-constitution) المزاد لصالح الرئيس التنفيذي لصندوق التحوط، كين غريفين. تسبب هذا في الكثير من الحيرة بشأن ما سيحدث للأموال التي تم المساهمة بها، مع الإعلان عن توكن جديد وإلغاءه، وتقلب سعر التوكن PEOPLE الذي حصل عليه المساهمون في DAO بشكل كبير. قرر المشروع في النهاية إنهاء العمل لأنه لا يمكن التوصل إلى اتفاق حول كيفية المضي قدمًا بدون نسخة من الدستور، ويمكن للمساهمين استعادة ETH (لكن رسوم المعاملات ستستهلك معظم أو كل مساهمات المساهمين الصغار) أو المطالبة بتوكنات PEOPLE الخاصة بهم.
 
 تم [التوقيع](https://twitter.com/jchervinsky/status/1461384347974615041) على مشروع قانون البنية التحتية سيئ السمعة ليصبح قانونًا، ومن المقرر أن يدخل حيز التنفيذ في 1 يناير 2024. تم [تقديم](https://twitter.com/jerrybrito/status/1461317078175072263) مشروع قانون من الحزبين لمعالجة مخاوف مجتمع العملات الرقمية بشأن مشروع قانون البنية التحتية.
 
@@ -440,7 +440,7 @@ _ حجم التداول الشهري لـ DCRDEX_
 
 أثار مفهوم NFT ومعجبيه ردود فعل سلبية من بعض المجتمعات عبر الإنترنت - ابتعد [Creative Commons](https://twitter.com/creativecommons/status/1463964199785271308) و [Discord](https://arstechnica.com/gaming/2021/11/discord-ceo-backs-away-from-hinted-nft-integration-after-backlash/) بأنفسهم عن المواد المتعلقة بـ NFT، بينما تم [إلغاء](https://twitter.com/BadWritingTakes/status/1450965836701831175) مشروع NFT للكتاب الشباب بعد حملة Twitter ضده.
 
-[أعلنت](https://bitcoinmagazine.com/business/jack-dorsey-square-decentralized-bitcoin-exchange-proposal-announced-tbdex) Square عن ورقة بيضاء توضح بالتفصيل اقتراحها بشأن امنصة المبادلات اللامركزية، tbDEX. ثم [غيرت](https://squareup.com/us/en/press/square-changes-name-to-block) Square اسمها إلى Block.
+[أعلنت](https://bitcoinmagazine.com/business/jack-dorsey-square-decentralized-bitcoin-exchange-proposal-announced-tbdex) Square عن ورقة بيضاء توضح بالتفصيل اقتراحها بشأن منصة المبادلات اللامركزية، tbDEX. ثم [غيرت](https://squareup.com/us/en/press/square-changes-name-to-block) Square اسمها إلى Block.
 
 تمت إضافة ETH كخيار عملة من قبل دار مزادات [Sothebys](https://decrypt.co/85841/sothebys-live-ethereum-bids-banksy-auctions)، مع قبول عروض ETH الحية أثناء المزاد وعرضها على الموجز - يمكن أيضًا السداد بعملة البتكوين أو الدولار الأمريكي أو الأوراق النقدية.
 
