--- a/journal/202112.md
+++ b/journal/202112.md
@@ -8,10 +8,10 @@ _الصورة: Nodetropolis بواسطة @saender_
 
 أبرز أحداث شهر ديسمبر:
 
-* تمت الموافقة على الدفعة الأولى من ديكريد للمتعاقدين من الخزينة الجديدة بتصويت لامركزي وتم إرسالها.
+* تمت الموافقة على أول دفعة للمتعاقدين ديكريد من الخزينة الجديدة بتصويت لامركزي وتم إرسالها.
 * تم الانتهاء من أعمال التطوير الخاصة بتغيير الإجماع ل DCP-10. سيؤدي ذلك إلى تغيير تقسيم مكافأة إثبات العمل/إثبات الحصة من 60٪/30٪ إلى 10٪/80٪.
 * تم نشر إصدار النسخة 1.3.1 لبوليتيا لإصلاح و صقل الأخطاء.
-* تم تعيين سجلات مشاركة جديدة في أنظمة التصويت على المقترحات، و التحصيص، و الخلط.
+* تسجيل مستويات مشاركة قياسة جديدة في أنظمة التصويت على المقترحات، و التحصيص، و الخلط.
 * تم فتح أول مرشحين للإصدار 1.7 للاختبار في أوائل يناير.
 * تم نشر اقتراح لتمويل المرحلة الثالثة من تطوير DCRDEX في أوائل يناير.
 
