--- a/journal/202112.md
+++ b/journal/202112.md
@@ -1,5 +1,3 @@
-<div dir="rtl">
-
 # مجلة ديكريد لشهر ديسمبر 2021
 
 ![abstract art by @saender](../img/202112.1.github.png)
@@ -392,6 +390,4 @@ _ما تم تحصيصه... لا يمكن عدم تحصيصه_
 صورة العنوان: saender
 * التمويل: أصحاب حصص الديكريد
 * النسخة الأصلية لمجلة الديكريد لشهر ديسمبر متوفرة على هذا الرابط [هنا](https://medium.com/decred/decred-journal-december-2021-376a27e7cc4e)
-* تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
-
-</div>
+* تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@
