--- a/journal/202204.md
+++ b/journal/202204.md
@@ -76,7 +76,6 @@ _ديكريديتون هو تطبيق محفظة لسطح المكتب كامل 
 * تمت إضافة طرق عرض [البرنامج التعليمي](https://github.com/decred/decrediton/pull/3669) المعاد تصميمه ضمن علامة التبويب الإعدادات والتي تغطي العديد من جوانب ديكريد.
 * تحتوي علامة التبويب التحصيص الآن على [مخطط معلوماتي](https://github.com/decred/decrediton/pull/3740) لمشتري التذاكر لأول مرة، لتذكير المستخدمين بأساسيات نظام التصويت المعتمد على التذاكر في ديكريد.
 * تحسينات الأداء في [علامة تبويب تاريخ المعاملة](https://github.com/decred/decrediton/pull/3745). والجدير بالذكر أن الصفوف يتم تحميلها الآن تدريجياً باستخدام التمرير اللانهائي، مما سيقلل من الاختناقات والبطء. تمت إضافة تسليط الضوء على آخر صف تم النقر عليه لتتبع موقع المستخدم في القائمة.
- * أصبح التشفير لكل حساب الآن تلقائيًا [للمحافظ المسترجعة](https://github.com/decred/decrediton/pull/3746).
 * أصبح التشفير لكل حساب الآن تلقائيًا [للمحافظ المسترجعة](https://github.com/decred/decrediton/pull/3746).
 * المزيد من تغطية اختبار واجهة المستخدم التلقائية.
 * ~5 إصلاحات للأخطاء.
@@ -117,6 +116,7 @@ _بوليتيا هي نظام المقترحات لديكريد. يتم استخ
 * إضافة [مكون مشروط](https://github.com/decred/politeiagui/pull/2749) مشترك.
 * إضافة [علامة لتكوين الملحقات](https://github.com/decred/politeiagui/pull/2754) عند إنشاء تطبيقات شبيهة ببوليتيا باستخدام أداة واجهة سطر الأوامر الجديدة `newapp`.
  * ميزات وإصلاحات جديدة في [مكتبة pi-ui](https://github.com/decred/pi-ui) المشتركة (تطبيق السمات الافتراضية، وتعريف أدوات الأزرار، وأساسيات التخطيط، وما إلى ذلك).
+
 <a id="cspp" />
 
 **[cspp](https://github.com/decred/cspp)**
@@ -169,7 +169,7 @@ _العديد من المحافظ!_
 * يتم إخطار المستخدم إذا كانت [مساحة القرص المتوفرة](https://github.com/planetdecred/dcrandroid/pull/607) منخفضة.
 * تمت إضافة رمز [لإخفاء وإظهار](https://github.com/planetdecred/dcrandroid/pull/601) رصيد المحفظة في صفحة النظرة العامة.
 * تمت إعادة صياغة [صفحة إرسال المعاملة](https://github.com/planetdecred/dcrandroid/pull/624) لتزويد المستخدمين بمزيد من السياق لمعاملة ناجحة.
-* منع المستخدمين من استعادة محافظ مكررة من [نفس البذرة](https://github.com/planetdecred/dcrandroid/pull/629، وكذلك من استيراد محافظ المشاهدة فقط باستخدام نفس المفتاح العمومي الموسع xpub.
+* منع المستخدمين من استعادة محافظ مكررة من [نفس البذرة](https://github.com/planetdecred/dcrandroid/pull/629)، وكذلك من استيراد محافظ المشاهدة فقط باستخدام نفس المفتاح العمومي الموسع xpub.
 * أصبحت صفحة استعادة مدخلات البذور الآن أكثر [حماية من لقطات الشاشة](https://github.com/planetdecred/dcrandroid/pull/614). كما لم تعد معاينة نافذة التطبيق تظهر في محول المهام.
 * تحديث الترجمة [الفرنسية](https://github.com/planetdecred/dcrandroid/pull/605).
 * ~ 4 إصلاحات للأخطاء وتعديلات وتحسينات أخرى.
@@ -247,7 +247,7 @@ _* تم تصحيحه من "214 ألف (بزيادة 14 ألف، + ما يزيد 
 
 اعتبارًا من 10 مايو، بلغ الرصيد المشترك للخزينة [القديمة](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) و[الجديدة](https://dcrdata.decred.org/treasury) 788,247 DCR (أي ما يعادل 32.7 مليون دولار أمريكي بسعر 41.52 دولارًا أمريكيًا). لا تزال حوالي 46 ألف DCR في الخزينة القديمة، أو حوالي 6٪ من الإجمالي.
 
-منذ الإصدار الأخير من مجلة ديكريد (ديسمبر 2021](https://xaur.github.io/decred-news/journal/202112))، تم نشر أربعة مقترحات على بوليتيا، تمت الموافقة عليها جميعًا.
+منذ الإصدار الأخير من مجلة ديكريد ([ديسمبر 2021](202112.md))، تم نشر أربعة مقترحات على بوليتيا، تمت الموافقة عليها جميعًا.
 
 تمت الموافقة على [اقتراح](https://proposals.decred.org/record/4475472) إستمرار تطوير منصة بوليتيا في مارس بميزانية قدرها 138,600 دولار  بموافقة 97٪ ونسبة مشاركة 55٪. يسمح هذا بتمويل تطوير منصة بوليتيا حتى يوليو 2022.
 
@@ -320,8 +320,7 @@ _نحن فقط نقوم بالتحصيص. أكثر قليلاً مرة أخرى.
 
 ## وسائل الإعلام
 
-* كتب @Applesaucesome[@Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) [برنامجًا تعليميًا عن العقدة الكاملة](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) لديكريد القائمة على السحابة باستخدام Digital Ocean.
-
+* كتب [@Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) [برنامجًا تعليميًا عن العقدة الكاملة](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) لديكريد القائمة على السحابة باستخدام Digital Ocean.
 
 > **قد تسأل لماذا يجب تشغيل العقدة الكاملة؟**
 >
@@ -349,12 +348,12 @@ _نحن فقط نقوم بالتحصيص. أكثر قليلاً مرة أخرى.
 بدأت مبادرة البث المباشر الشهرية الجديدة بواسطة @phoenixgreen و @Exitus تسمى "ديكريد وحالة السوق". نرحب بأي أعضاء مجتمع متحمسين للانضمام!
 
 * [العقوبات، المصادرة و الرقابة](https://www.youtube.com/watch?v=t3KQ4UhNNOI) بواسطة @Exitus و @phoenixgreen
-* [العملات المستقرة و المنظمات المستقلة اللامركزية(https://www.youtube.com/watch?v=a5W_90nuJQ8) بواسطة @Exitus و @phoenixgreen
+* [العملات المستقرة و المنظمات المستقلة اللامركزية](https://www.youtube.com/watch?v=a5W_90nuJQ8) بواسطة @Exitus و @phoenixgreen
 
 أشرطة فيديو التيك التوك:
 
 * [حديث التيك توك عن أهمية خزينة DCR](https://www.tiktok.com/@decred_crypto/video/7081478628759833861) بواسطة @Exitus و @DCR\_Dajana
-* * [فيديو التيك التوك عن إشارة كاثي وود لديكريد](https://twitter.com/DajanaDcr/status/1511162514779914241)  بواسطة @Exitus و @DCR\_Dajana
+*  [فيديو التيك التوك عن إشارة كاثي وود لديكريد](https://twitter.com/DajanaDcr/status/1511162514779914241)  بواسطة @Exitus و @DCR\_Dajana
 
 المتعة و الفن:
 
