--- a/journal/202204.md
+++ b/journal/202204.md
@@ -1,5 +1,3 @@
-<div dir="rtl">
-
 # مجلة ديكريد لشهر أبريل 2022
 
 ![abstract art](../img/202204.1.github.png)
@@ -418,8 +416,6 @@ _الحجم الشهري لمنصة المبادلات اللامركزية بد
 
 التمويل: أصحاب حصص الديكريد
 
-النسخة الأصلية لمجلة الديكريد لشهر أبريل متوفرة على هذا الرابط [هنا](https://medium.com/decred/decred-journal-april-2022-c2831e517eb4)
+النسخة الأصلية لمجلة الديكريد لشهر أبريل متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/202204)
 
-تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
-
-</div>
+تمت الترجمة إلى اللغة العربية بواسطة: arij@.
