--- a/journal/202204.md
+++ b/journal/202204.md
@@ -374,6 +374,10 @@ _نحن فقط نقوم بالتحصيص. أكثر قليلاً مرة أخرى.
 * [تعلم الأعمال الداخلية لـديكريد](https://twitter.com/DCR_Uncle/status/1515224110682415106) بواسطة @DCR\_Uncle
 * [مقارنة بين إثبات العمل و إثبات الحصة](https://twitter.com/behindtext/status/1514626081902505985) بواسطة @jy-p
   
+## الأسواق
+
+في أبريل، تم تداول DCR بين 52.40 دولارًا أمريكيًا و 86.20 دولارًا أمريكيًا/BTC 0.00129-0.00216. وقد بلغ متوسط ​​السعر اليومي 57.22 دولارًا.
+
 ارتفع سعر ديكريد بنسبة 45٪ تقريبا إلى أكثر من 86 دولارا في يوم واحد في 18 أبريل، وهو أعلى مستوى له في أربعة أشهر. كان هذا الضخ للأسف قصير الأجل.
 
 ![](../img/202204.8.full.png)
