--- a/journal/202205.md
+++ b/journal/202205.md
@@ -377,7 +377,7 @@ _الصورة: تصاعد نسبة العرض المخلوط وغير المنف
 
 الحضور:
 
-* ستضاف كل من arij@ و khalidesi@ كشك ديكريد خلال يومين من [EMEC EXPO](https://twitter.com/in_insaf/status/1526979202951655425) (المعرض الدولي للتحول الرقمي) في الدار البيضاء، المغرب، أجابا على العديد من الأسئلة حول كيفية عمل ديكريد والقضايا التي تحلها.
+* استضاف كل من arij@ و khalidesi@ كشك ديكريد خلال يومين من [EMEC EXPO](https://twitter.com/in_insaf/status/1526979202951655425) (المعرض الدولي للتحول الرقمي) في الدار البيضاء، المغرب، أجابا على العديد من الأسئلة حول كيفية عمل ديكريد والقضايا التي تحلها.
 * [تحدث](https://twitter.com/Decred_BR/status/1529089788199976960) إدسون نيتو عن ديكريد في [Bitconf](https://www.instagram.com/p/Cd6sL2wLHU7/) في ساو باولو، البرازيل.
 
 **الفعاليات القادمة**
