--- a/journal/202205.md
+++ b/journal/202205.md
@@ -1,5 +1,3 @@
-<div dir="rtl">
-
 # مجلة ديكريد لشهر مايو 2022
 
 ![abstract art by @saender](../img/202205.1.github.png)
@@ -305,7 +303,7 @@ _dcrweb هو الكود المصدري لموقع decred.org ._
 
 ## الإدارة و الحوكمة
 
-في في مايو، تلقت [الخزينة](https://dcrdata.decred.org/treasury) الجديدة 9,407 بقيمة 390 ألف دولار بمتوسط ​​سعر هذا الشهر البالغ 41.46 دولارًا. تم إنفاق 2,950 DCR من عنوان الخزينة القديم للدفع للمتعاقدين، بقيمة 122 ألف دولار بمعدل شهر مايو، أو 179 ألف دولار بمعدل فواتير أبريل البالغ 60.62 دولارًا. كانت هذه المدفوعات لتغطية فواتير المتعاقدين لشهري مارس وأبريل.
+في في مايو، تلقت [الخزينة](https://dcrdata.decred.org/treasury) الجديدة 9,407 بقيمة 390 ألف دولار بمتوسط سعر هذا الشهر البالغ 41.46 دولارًا. تم إنفاق 2,950 DCR من عنوان الخزينة القديم للدفع للمتعاقدين، بقيمة 122 ألف دولار بمعدل شهر مايو، أو 179 ألف دولار بمعدل فواتير أبريل البالغ 60.62 دولارًا. كانت هذه المدفوعات لتغطية فواتير المتعاقدين لشهري مارس وأبريل.
 
 اعتبارًا من 12 يونيو، بلغ الرصيد المشترك [للخزينة القديمة](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) و[الخزينة الجديدة](https://dcrdata.decred.org/treasury) 795,673 DCR (أي ما يعادل 23.9 مليون دولار أمريكي بسعر 30.09 دولار أمريكي).
 
@@ -462,5 +460,3 @@ _الصورة: تقديم Edson Neto في Bitconf._
 النسخة الأصلية لمجلة الديكريد لشهر مايو متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/202205).
 
 تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
-
-</div>
