--- a/journal/202206.md
+++ b/journal/202206.md
@@ -113,7 +113,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) هي منصة مبادلات غير 
 
 تقدم دعم الأصول:
 
-* تمت إضافة [نتائج](https://twitter.com/blockchainbuck/status/1532546291783319552) أول [تدقيق للعقود الذكية](https://github.com/decred/dcrdex/pull/1643) للإيثيريوم الذي أجرته InterFi Network (منعكس في [مستودعهم](https://github.com/interfinetwork/smart-contract-audits/blob/audit-updates/DecredDEX_AuditReport_InterFi.pdf))). خلص التدقيق إلى أن كود Solidity له "شدة مخاطر منخفضة" و "مخاطر مركزية منصة المبادلات اللامركزية لديكريد المرتبطة بالمالك النشط هي منعدمة”.
+* تمت إضافة [نتائج](https://twitter.com/blockchainbuck/status/1532546291783319552) أول [تدقيق للعقود الذكية](https://github.com/decred/dcrdex/pull/1643) للإيثيريوم الذي أجرته InterFi Network (منعكس في [مستودعهم](https://github.com/interfinetwork/smart-contract-audits/blob/audit-updates/DecredDEX_AuditReport_InterFi.pdf)). خلص التدقيق إلى أن كود Solidity له "شدة مخاطر منخفضة" و "مخاطر مركزية منصة المبادلات اللامركزية لديكريد المرتبطة بالمالك النشط هي منعدمة".
 * تم التحديث إلى أحدث [محول برمجي ل ](https://github.com/decred/dcrdex/pull/1679)Solidity.
 * إضافة  الدعم لـ [Zcash](https://github.com/decred/dcrdex/pull/1570) (فك تشفير الكتل والمعاملات، وتوقيع المدخلات والاختبارات).
 * تم التحديث إلى [الإصدار 0.21.2 للايتكوين](https://github.com/decred/dcrdex/pull/1536). كما تمت إضافة فك تشفير مخصص لبيانات الكتلة والمعاملات لدعم  [كتل الامتداد](https://github.com/litecoin-project/lips/blob/master/lip-0002.mediawiki) الجديدة للايتكوين و[سلسلة MimbleWimble الجانبية](https://github.com/litecoin-project/lips/blob/master/lip-0003.mediawiki).
