--- a/journal/202206.md
+++ b/journal/202206.md
@@ -36,7 +36,7 @@ _[dcrd](https://github.com/decred/dcrd) هو تطبيق عقدة كامل يعم
 * [تحسين](https://github.com/decred/dcrd/pull/2957) حساب العمل التراكمي باستخدام حزمة الأعداد الصحيحة الجديدة ذات التخصيص الصفري 256[ بت](https://github.com/decred/dcrd/pull/2787). والنتيجة هي استخدام أقل من 100 ميجا بايت في المتوسط، ووقت مزامنة أولي لسلسلة الكتل أسرع بنسبة 5٪.
 * دعم [الإغلاق النظيف](https://github.com/decred/dcrd/pull/2958) على المزيد من متغيرات Unix وعلى Windows (يتم تشغيله بواسطة أحداث مثل تسجيل دخول المستخدم أو إغلاق نافذة المحطة أو إغلاق النظام).
 * [الترتيب العكسي](https://github.com/decred/dcrd/pull/2956) الذي تضاف به المعاملات إلى مجمع الذاكرة أثناء إعادة الربط لتصحيح حساب إحصاءَات سلسلة المعاملات في ظل ظروف خاصة. يساعد هذا التغيير في ضمان قيام المعدنين بزيادة الرسوم على سلاسل المعاملات الكبيرة عبر عمليات إعادة الربط. لم تكن هناك مشاكل مع الكود القديم حتى الآن لأن الكتل ليست ممتلئة وإعادة الربط نادرة.
-* [إزالة](https://github.com/decred/dcrd/pull/2961) كود تنقيح مجلة الإنفاق الذي أصبح غير ضروري مع إزالة فهرس العناوين.
+* [إزالة](https://github.com/decred/dcrd/pull/2961) كود تنقيح سجل الإنفاق الذي أصبح غير ضروري مع إزالة فهرس العناوين.
 * إعلان [رفض](https://github.com/decred/dcrd/pull/2963) معاملات `treasurybase` المستقلة. اعتبارًا من تفعيل DCP-6، يجب أن يكون لكل كتلة معاملة `treasurybase` تدفع الإعانة المطلوبة إلى الخزينة. "المستقلة" هي معاملات غير مؤكدة والتي لا تنتمي إلى الكتلة. لا تعتبر `treasurybases` منطقية باعتبارها معاملات مستقلة لأنها تكون صحيحة فقط عندما تكون جزءًا من عملية إنشاء الكتلة. لقد تم رفضها ضمنيًا بالفعل وهذا التغيير يجعلها أكثر وضوحًا كشكل من أشكال الترميز الدفاعي في حالة انتهاك التغييرات المستقبلية لتلك الافتراضات الضمنية.
 * تمت إزالة السياسة التي سمحت بنقل المعاملات منخفضة الرسوم/المجانية وتعدينها. لقد خدمت غرضها في الماضي على حساب بعض الجوانب السلبية. الآن هي غير ضرورية ويمكن للمستخدمين رفع أولوية المعاملات "العالقة" باستخدام معاملات إضافية (المعروفة أيضًا باسم الولد يدفع للوالد - CPFP). كما تم استبعاد أعلام واجهة سطر الأوامر ذات الصلة `--norelaypriority` و `—limitfreerelay`.
 * ~ 5 طلبات تحسين صغيرة.
