--- a/journal/202206.md
+++ b/journal/202206.md
@@ -1,6 +1,4 @@
-<div dir="rtl">
-
-# مجلة ديكريد - يونيو 2022
+# مجلة ديكريد لشهر يونيو 2022
 
 ![](https://xaur.github.io/decred-news/img/202206.5.github.png)
 
@@ -420,5 +418,3 @@ _الصورة: قد يشير كل من مؤشري MA Multiplier و Mayer Multipl
 النسخة الأصلية لمجلة الديكريد لشهر يونيو متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/202206).
 
 تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
-
-</div>
