--- a/journal/202207.md
+++ b/journal/202207.md
@@ -354,6 +354,12 @@ _الصورة: توزيع إصدار عقدة dcrd_
 
 * توقفت مبادرة المساهمات الأسبوعية مؤقتًا لمدة شهر ولكنها [عادت بإصدار رابع](https://www.reddit.com/r/decred/comments/w7qg79/weekly_contributions_edition_4_bounty_pool_2_dcr/) لمدة أطول ومجموعة مكافآت من DCR 2 (بالإضافة إلى DCR 1 تعهد به أحد المشاركين للحصول على ثاني أفضل مساهمة إذا كان هناك واحد). يسير التمهيد بجد ولكن لا يزال هناك المزيد من الأفكار التي يجب تجربتها قبل الاستسلام.
 
+## الأسواق
+
+في يوليو، تم تداول DCR بين 20.86 دولارًا أمريكيًا و 29.10 دولارًا أمريكيًا/BTC 0.00104-0.00134. وقد بلغ متوسط السعر اليومي 23.93 دولارًا.
+
+شارك Applesaucesome@ [مراجعتين](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) [للسوق](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) مع رسوم بيانية وتعليقات عن العملات الرقمية والسوق الأوسع، و "الجيل القادم من الهيبوم" في القطعة الأخيرة.
+
 ![](../img/202207.12.github.png)
 
 _الصورة: الحجم الشهري لـ DCRDEX بالدولار الأمريكي._
