--- a/journal/202207.md
+++ b/journal/202207.md
@@ -130,6 +130,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) هي منصة مبادلات غير 
 * إضافة دعم عام [لإعادة تشكيل المحفظة المباشرة](https://github.com/decred/dcrdex/pull/1686) وتنفيذها من أجل BTC. يسمح هذا بإعادة إنشاء العملات المقفلة بعد تغيير تكوين المحفظة. قبل هذا التغيير، كانت إعادة تشكيل محفظة بأوامر مباشرة تفتح الأموال ولكن محاولة استخدامها أدت إلى خطأ.
 * تم تنفيذ التخزين المؤقت [لمعدل الرسوم وانتهاء صلاحيته](https://github.com/decred/dcrdex/pull/1721) لحل مشكلة طويلة الأمد تتعلق باستخدام معدل الرسوم الذي عفا عليه الزمن. تم أيضًا تحسين كيفية جلب معدل الرسوم المتكرر من مصادر مختلفة (المحفظة، دفتر الطلبات، واجهة برمجة التطبيقات الخارجية).
 * توضيح الرسالة حول [تعطيل خادم منصة المبادلات اللامركزية ](https://github.com/decred/dcrdex/pull/1634)DEX. باستخدام ميزات اكتشاف الحساب الحديثة، يمكن تعطيل الخادم وإعادة تمكينه حسب الحاجة دون دفع رسوم التسجيل مرة أخرى.
+* تحسين [استخدام الموارد](https://github.com/decred/dcrdex/pull/1684) عند كتابة السعر.
 * إصلاح عرض [النسبة المئوية المملوءة](https://github.com/decred/dcrdex/pull/1711) لعمليات الشراء في السوق.
 * إصلاح حصول المستخدمون على [رصيد إكمال الطلب](https://github.com/decred/dcrdex/pull/1707) للطلبات الملغاة في ظروف نادرة.
 
