--- a/journal/202208.md
+++ b/journal/202208.md
@@ -7,7 +7,7 @@ _الصورة: "مستوحاة" من تصميم decred.org الجديد الخا
 أبرز أحداث شهر أغسطس:
 
 * تم اقتراح إصلاح موقع decred.org وتم إقراره ونشره.
-* تم إصدار النسخة 1.4.0 لبوليتيا، وتتضمن الميزات الجديدة نافذة مدتها 5 دقائق لتحرير تعليقات الفرد.
+* تم إصدار النسخة 1.4.0 لبوليتيا، وتتضمن الميزات الجديدة نافذة مدتها 5 Gدقائق لتحرير تعليقات الفرد.
 * تم إصدار النسخة 0.5.2 لمنصة المبادلات اللامركزية لديكريد ويمكن تشغيله بالفعل من قبل المتداولين غير الصبورين الذين لا يرغبون في انتظار إدماج تحديث ديكريديتون الجاري العمل عليه.
 * تم إصدار النسخة 1.7.4 من برنامج ديكريد الأساسي ككود مصدر فقط لإصلاح شبكة اختبار تم إيقافها بواسطة معدني ASIC.
 
@@ -200,7 +200,7 @@ _الصورة: نسق DCRDEX لأجهزة الكمبيوتر اللوحي._
 _[GoDCR](https://github.com/planetdecred/godcr) عبارة عن محفظة واجهة مستخدم رسومية خفيفة الوزن لسطح المكتب مع دعم التحصيص، والخصوصية، والتصويت على بوليتيا، والتصويت بالإجماع، والمزيد._
 
 * تعطيل صفحات الاستلام والإرسال والخلط [لمحافظ المشاهدة فقط](https://github.com/planetdecred/godcr/pull/1051).
-* تم تحديث [صفحة إعدادات المحفظة(https://github.com/planetdecred/godcr/pull/1036) إلى النسخة 2 لتصميم واجهة المستخدم.
+* تم تحديث [صفحة إعدادات المحفظة](https://github.com/planetdecred/godcr/pull/1036) إلى النسخة 2 لتصميم واجهة المستخدم.
 * تم تحديث [صفحة إعدادات المستوى الأعلى](https://github.com/planetdecred/godcr/pull/1035) إلى النسخة 2 لتصميم واجهة المستخدم.
 * تنفيذ [تنسيق إنفاق الخزينة](https://github.com/planetdecred/godcr/pull/975).
 * تم تحديث [اللون والأيقونة](https://github.com/planetdecred/godcr/pull/1028) على الشريط العلوي.
