--- a/journal/202208.md
+++ b/journal/202208.md
@@ -315,7 +315,7 @@ _الصورة: توزيع معدل هاش التجمع.
 
 **التحصيص**: تراوح [سعر التذكرة](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l5vqeg6f-l7pjl52i&axis=time&visibility=true-true&mode=stepped) بين 22-239 DCR، [بمتوسط](https://dcrstats.com/) 230.2 DCR (+3.4) خلال 30 يوما.
 
-بلغ [المبلغ المقفل](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l5vqeg6f-l7pjl52i&scale=linear&bin=block&axis=time) 9.22-9.39 مليون DCR، مما يعني أن  63.9-65.0 من العرض المتاح [شارك]](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l5vqeg6f-l7pjl52i&scale=linear&bin=block&axis=time) في إثبات الحصة. هذا هو أعلى مستوى جديد على الإطلاق للمشاركة في إثبات الحصة ولقيمة مجموع التذاكر.
+بلغ [المبلغ المقفل](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l5vqeg6f-l7pjl52i&scale=linear&bin=block&axis=time) 9.22-9.39 مليون DCR، مما يعني أن  63.9-65.0 من العرض المتاح [شارك](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l5vqeg6f-l7pjl52i&scale=linear&bin=block&axis=time) في إثبات الحصة. هذا هو أعلى مستوى جديد على الإطلاق للمشاركة في إثبات الحصة ولقيمة مجموع التذاكر.
 
 **مقدم خدمة التصويت**: في 1 سبتمبر، تمت إدارة حوالي 7,050 (-120) تذكرة حية بواسطة خوادم vspd [المدرجة](https://decred.org/vsp/). إجمالاً، تمكن 18 مقدم خدمة التصويت من إدارة 17.3٪ من مجموع التذاكر (-0.1٪).
 
